# calc

./: .claude-instructions  .gitignore  CLAUDE.md  Makefile  README.md  app.config.ts  calc  deploy.sh  flake.nix  index.js  ll.json  node.js  package-lock.json  package.json  parser.js  server.js  theories.thy  todo  webpack.config.js
zk/: Cargo.toml
zk/ill-checker/: Cargo.toml
zk/ill-checker/src/: bridge.rs  buses.rs  lib.rs  tags.rs
zk/ill-checker/src/chips/: binary_r.rs  discard.rs  dup.rs  formula_rom.rs  gamma_rom.rs  identity.rs  mod.rs  tensor_l.rs  zero_l.rs
zk/ill-checker/src/rule/: ill.rs  mod.rs
zk/ill-checker/tests/: p1b_identity_proof.rs  p1c_tensor_proof.rs  p1d_left_additive.rs  p1f_e2e.rs  p2_cross_validate.rs  p2_exponential.rs  p2_loli.rs  p2_monad.rs  p2_oplus.rs  p2_quantifier.rs  p2_unit_zero.rs  p2_with_l.rs  s2_multi_chip_bus.rs  s4_preprocessed_rom.rs
zk/ill-checker/tests/common/: mod.rs
zk/ill-checker/tests/fixtures/: bang_dereliction.json  copy.json  identity.json  loli_l.json  loli_r.json  nested_loli_tensor.json  one_l.json  one_r.json  oplus_r1.json  tensor_r.json  tensor_swap.json  with_l1.json  with_r.json  zero_l.json
zk/proof-checker/: Cargo.toml
zk/proof-checker/src/: bridge.rs  buses.rs
zk/proof-checker/src/chips/: ctx_boundary.rs  fact_axiom.rs  fact_rom.rs  flat_final.rs  flat_init.rs  flat_step.rs  freevar_rom.rs  init.rs  mod.rs  oblig_boundary.rs  pred_rom.rs  simple_rom.rs  subst.rs  uint256_arith.rs
zk/proof-checker/src/rule/: mod.rs
zk/proof-checker/tests/: p1f_e2e.rs  p2_cross_validate.rs  p2_exponential.rs  p2_flat.rs  p2_loli.rs  p2_monad.rs  p2_oplus.rs  p2_quantifier.rs  p2_subst.rs  p2_unit_zero.rs  p2_with_l.rs  p3_forgery.rs  p4a_chunked.rs  p4a_composition.rs  p4a_spike.rs  p5_spike_recursive_proof.rs  p6_chunked_tree.rs  p6_custom_chips.rs  p6_shared_keygen.rs  p6_soundness.rs  p6_symbolic_e2e.rs  p6_tree_composition.rs  p6_tree_recursive_proof.rs  p6_uint256.rs  p6_uint256_e2e.rs  s1_basic_air.rs  s3_challenge_in_bus.rs
zk/proof-checker/tests/common/: mod.rs
zk/proof-checker/tests/fixtures/: bang_dereliction.json  bang_r_promotion.json  clause_copy_loli.json  copy.json  copy_tensor.json  custom_chip_inc.json  identity.json  loli_l.json  loli_r.json  multisig_chunked.json  nested_loli_tensor.json  one_l.json  one_r.json  oplus_r1.json  pure_linear.json  solc_chunked_tree.json  solc_custom_chips.json  solc_flat.json  solc_forward.json  solc_symbolic_000.json  solc_symbolic_001.json  solc_symbolic_002.json  solc_symbolic_003.json  solc_symbolic_004.json  solc_symbolic_005.json  solc_symbolic_006.json  solc_symbolic_007.json  solc_symbolic_008.json  solc_symbolic_009.json  solc_symbolic_010.json  solc_symbolic_011.json  solc_symbolic_012.json  solc_symbolic_013.json  solc_symbolic_014.json  solc_symbolic_015.json  solc_symbolic_016.json  solc_symbolic_017.json  solc_symbolic_018.json  solc_symbolic_019.json  solc_symbolic_020.json  (+16 more)
zk/sequent-certifier/: Cargo.toml
zk/sequent-certifier/src/: bridge.rs  buses.rs  lib.rs
zk/sequent-certifier/src/chips/: byte_check_rom.rs  canon_cons_rom.rs  ctx_boundary.rs  fact_axiom.rs  fact_rom.rs  flat_step.rs  formula_rom.rs  gamma_rom.rs  init.rs  oblig_boundary.rs  subst.rs  zero_l.rs
zk/sequent-certifier/tests/: p1f_e2e.rs  p2_cross_validate.rs  p2_exponential.rs  p2_flat.rs  p2_loli.rs  p2_monad.rs  p2_oplus.rs  p2_quantifier.rs  p2_subst.rs  p2_unit_zero.rs  p2_with_l.rs  p3_forgery.rs  p4a_chunked.rs  p4a_composition.rs  p4a_spike.rs  p5_spike_recursive_proof.rs  p6_chunked_tree.rs  p6_custom_chips.rs  p6_shared_keygen.rs  p6_soundness.rs  p6_symbolic_composition.rs  p6_symbolic_e2e.rs  p6_tree_composition.rs  p6_tree_recursive_proof.rs  p6_uint256.rs  p6_uint256_e2e.rs  s4_preprocessed_rom.rs  s5_field_comparison.rs
zk/spike/: 01_fibonacci.asm  02_challenge_stage1.asm  03_bus_basic.asm  04_bus_stage1_tuple.asm  04a_bus_stage1_simple.asm  04b_bus_stage1_product.asm  04c_bus_stage1_sum.asm  04d_bus_stage1_hinted.asm  05_cross_namespace_bus.pil  06_witness.csv  06_witness_csv.asm
(+1189 files in other folders)
