[workspace]
members = ["proof-checker"]
resolver = "2"

[workspace.dependencies]
openvm-stark-backend = { git = "https://github.com/openvm-org/stark-backend.git", tag = "v1.3.0" }
openvm-stark-sdk = { git = "https://github.com/openvm-org/stark-backend.git", tag = "v1.3.0" }

p3-air = "=0.4.1"
p3-field = "=0.4.1"
p3-matrix = "=0.4.1"
p3-baby-bear = "=0.4.1"
p3-goldilocks = "=0.4.1"

rayon = "1"
rand = { version = "0.9", default-features = false, features = ["std_rng"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Phase 4a: openvm-native-recursion for STARK-in-STARK verification
# Using openvm-org (not powdr-labs fork) — same stark-backend v1.3.0 + p3 =0.4.1
openvm-native-recursion = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.5.0", default-features = false, features = ["test-utils"] }
openvm-native-compiler = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.5.0", default-features = false }
openvm-native-circuit = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.5.0", default-features = false, features = ["test-utils"] }
openvm-circuit = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.5.0", default-features = false, features = ["test-utils"] }

# Optimize crypto dependencies even in dev/test builds.
# Field arithmetic + FFT + Poseidon2 hashing are 10-100x slower at -O0.
[profile.dev.package."*"]
opt-level = 2

[profile.test.package."*"]
opt-level = 2

# Workaround: OpenVM v1.5.0 has an overly strict debug_assert in metered memory
# (memory_ctx.rs:244: "align_bits must be <= size_bits"). The assertion fires when
# chunk_bits=0 (initial_block_size=1 without continuations) and a U8 address space
# has non-zero access counts. The code handles this correctly (empty loop), but the
# assert rejects it. Disabling debug assertions for this crate is safe.
[profile.dev.package.openvm-circuit]
debug-assertions = false

[profile.test.package.openvm-circuit]
debug-assertions = false
