[package]
name = "ill-checker"
version = "0.1.0"
edition = "2021"

[dependencies]
openvm-stark-backend = { workspace = true }
openvm-stark-sdk = { workspace = true }
p3-air = { workspace = true }
p3-field = { workspace = true }
p3-matrix = { workspace = true }
p3-baby-bear = { workspace = true }
p3-goldilocks = { workspace = true }
rand = { workspace = true }
